<resources>
    <string name="app_name">TwikBust</string>
    <string name="photos">Photos</string>
    <string name="profile">Profile</string>
    <string name="movies">Movies</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_navigation_bar">NavigationBar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
